add class button

--- a/index.html
+++ b/index.html
@@ -3,22 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <title>КДЛ Олимп</title>
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        possimus suscipit totam! Adipisci aspernatur beatae deserunt distinctio
-        earum eveniet expedita explicabo facere facilis id ipsa ipsam iste,
-        magni molestias neque nulla omnis perferendis perspiciatis placeat
-        quaerat qui quis quod repellat rerum tempore unde veniam voluptates.
-        Accusantium dicta eum explicabo minima minus neque perferendis repellat,
-        saepe sapiente? Architecto cupiditate ex excepturi laboriosam natus
-        perspiciatis placeat quae sequi temporibus vero! Distinctio error
-        facilis illo inventore laborum maxime, mollitia nulla quis quisquam, quo
-        reprehenderit sit.
+      <div class="container flex space-between items-center">
+        <div class="header__address">
+          <img class="logo" src="/assets/img/logo.png" alt="КДЛ Олимп">
+            <p class="text">
+              г. Омск<br>
+              ул. Карла Маркса, 45
+            </p>
+        </div>
+        <div class="header__phone">
+          <a href="tel:+79835200554" class="text header__phone-number">+7 983 520 05 54</a>
+          <a href="#" class="button button_green">Whatsapp</a>
+        </div>
       </div>
     </header>
+    <section class="main">
+    </section>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
