--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,7 +13,7 @@
       <div class="container flex space-between items-center">
         <div class="header__address">
           <img class="logo" src="/assets/img/logo.png" alt="КДЛ Олимп">
-            <p class="text">
+            <p class="text_sf">
               г. Омск<br>
               ул. Карла Маркса, 45
             </p>
@@ -25,6 +25,10 @@
       </div>
     </header>
     <section class="main">
+<div class="container">
+  <h1>Достоверные медицинские анализы</h1>
+
+</div>
     </section>
     <script type="module" src="/main.js"></script>
   </body>
