add div 'properties'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container flex space-between items-center">
         <div class="header__address">
           <img class="logo" src="/assets/img/logo.png" alt="КДЛ Олимп">
-            <p class="text_sf">
+            <p class="text_sf text">
               г. Омск<br>
               ул. Карла Маркса, 45
             </p>
@@ -24,9 +24,18 @@
         </div>
       </div>
     </header>
-    <section class="main">
-<div class="container">
-  <h1>Достоверные медицинские анализы</h1>
+    <section class="main section">
+<div class="container container-section">
+    <h1 class="text_gradient text_analyzes">Достоверные<br> медицинские<br> анализы</h1>
+  <div class="section__address flex space-between">
+    <a href="#" class="button button_fill_blue ">Анализы</a>
+    <a href="#" class="button button_blue" >Как проехать</a>
+  </div>
+  <div class="container flex space-between items-center text_sf_regular container_properties">
+  <p><b>3000+</b><br>видов анализов</p>
+    <p>Швейцарские<br>анализаторы Roche</p>
+    <p>Профессиональные<br>медсестры</p>
+  </div>
 
 </div>
     </section>
